# napari-merge-stardist-masks

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
models/: README.md
models/stardist-opp-10/: config.json  thresholds.json
models/stardist-opp-12/: config.json  thresholds.json
models/stardist-opp-6/: config.json  thresholds.json
models/stardist-opp-7/: config.json  thresholds.json
models/stardist-opp-8/: config.json  thresholds.json
src/napari_merge_stardist_masks/: __init__.py  _sample_data.py  _widget.py  napari.yaml
src/napari_merge_stardist_masks/_tests/: test_sample_data.py  test_widget.py
